# adamata-ml-engineer-test

./: .gitattributes  README.md  custom.onnx  custom.pt  flake.nix  representative_data.npy
bsort/: .gitignore  main.py  pyproject.toml  settings.yaml
bsort/.github/workflows/: ci-cd.yaml
bsort/src/: __init__.py  cli.py  config.py  infer.py  train.py  utils.py
bsort/tests/: __init__.py  test_bsort.py
dataset/labelled/: README.dataset.txt  README.roboflow.txt  data.yaml
dataset/labelled/test/labels/: raw-250110_dc_s001_b4_1_jpg.rf.a14b6d51da7363efdf299560f0721d30.txt
dataset/labelled/train/labels/: raw-250110_dc_s001_b2_1_jpg.rf.b4c8714826298b17430b4f0e66a95b20.txt  raw-250110_dc_s001_b2_1_jpg.rf.b80941f79e2679b1c6887a361cfaebb7.txt  raw-250110_dc_s001_b2_1_jpg.rf.f2f6dd9673a48ce48b883ec5819bc229.txt  raw-250110_dc_s001_b2_3_jpg.rf.7a2c5c8241e1cec0fdafecf73c29d284.txt  raw-250110_dc_s001_b2_3_jpg.rf.9c1a3aace115b31e6e75224a7f3eb3fa.txt  raw-250110_dc_s001_b2_3_jpg.rf.c3722c39159838f12354c07a8ea098d2.txt  raw-250110_dc_s001_b3_2_jpg.rf.25fcc9e4a7d7e1d0083cabeff7b5f8d7.txt  raw-250110_dc_s001_b3_2_jpg.rf.788dfba620d8967cd5ca90e4d21ac85e.txt  raw-250110_dc_s001_b3_2_jpg.rf.cdbd48adbf74855ec7d6eb078a74b6c4.txt  raw-250110_dc_s001_b3_3_jpg.rf.280217ba256b28b3490372ef7d7c921e.txt  raw-250110_dc_s001_b3_3_jpg.rf.563aed55917b32d7b0a29aa5f9ded28e.txt  raw-250110_dc_s001_b3_3_jpg.rf.7f0da446e59b22df67caf7ad15819893.txt  raw-250110_dc_s001_b3_4_jpg.rf.6c238421230d5c5f1170c98b803f6d36.txt  raw-250110_dc_s001_b3_4_jpg.rf.995d3b4d6c79d90d7c5b26ff4e823b85.txt  raw-250110_dc_s001_b3_4_jpg.rf.b50987f82f6060035bc841b32a5bc5b0.txt  raw-250110_dc_s001_b4_2_jpg.rf.2a6fa7145c0f6e27524f9cccfdb6f147.txt  raw-250110_dc_s001_b4_2_jpg.rf.40e3e57eb0a9c41c56f3b7789217091f.txt  raw-250110_dc_s001_b4_2_jpg.rf.dbca53775ed9fa65a4f4a0e39fe1b336.txt  raw-250110_dc_s001_b4_3_jpg.rf.28e9e6088b09fede9b2018261aa0cefc.txt  raw-250110_dc_s001_b4_3_jpg.rf.47cdf0eb9cc6bca42678d744d8c0e50e.txt  raw-250110_dc_s001_b4_3_jpg.rf.586438bd7a811fa154db655f23db2758.txt  raw-250110_dc_s001_b5_3_jpg.rf.5adaed9f2b21658c7d8ff3454d63cbf6.txt  raw-250110_dc_s001_b5_3_jpg.rf.9cb3138a713329e63200ad2fb487a812.txt  raw-250110_dc_s001_b5_3_jpg.rf.bbe36b52edfe7dd6744909acecde05d3.txt
dataset/labelled/valid/labels/: raw-250110_dc_s001_b2_15_jpg.rf.7e288e25601b1eb3fb97ae60f984666a.txt  raw-250110_dc_s001_b5_2_jpg.rf.c9c876da2c69ea146d10a0deaa91ffa9.txt  raw-250110_dc_s001_b5_5_jpg.rf.c7ee3b810944ad3bef68a4e539c44f67.txt
notebook/: .gitignore  README.md  adamata-test-notebook.ipynb
