[project]
name = "bsort"
version = "0.1.0"
description = "ML Pipeline for Object Detection"
readme = "README.md"
requires-python = "==3.11.13"
authors = [
    {name = "Daffa Haj Tsaqif", email = "narutohaj00@gmail.com"},
]
dependencies = [
  "ultralytics==8.3.232",
  "wandb==0.21.0",
  "requests==2.32.5",
  "opencv-python==4.12.0.88",
  "pandas==2.2.3",
  "numpy==2.2.6",
  "PyYAML==6.0.3",
  "pillow==11.3.0"
]

[project.scripts]
bsort = "bsort.cli:main"

[project.urls]
"Homepage" = "https://github.com/dhupee/adamata-ml-engineer-test"
"Bug Reports" = "https://github.com/dhupee/adamata-ml-engineer-test/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
